--- a/Home.html
+++ b/Home.html
@@ -1,14 +1,14 @@
 
 <html>
 <head>
-  <title> UTFPR-DV </title>
+  <title> GD HOME </title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  
+   
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="css/signin.css" rel="stylesheet">
 
 </head>
@@ -22,13 +22,9 @@
   </nav>
   <div class="sidebar">
 		<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:15%">
-
 			<div class="w3-sidebar w3-light-grey w3-card" style="width:15%">
 				<br><a href="/home" class="w3-bar-item w3-button">SAIR</a></br>
 			</div>
 		</div>
 	</div>
-
-  
-
 </body></html>
