menu, clicando nestas opções irá para a outra pagina

--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,11 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">UTFPR-DV</a>
+		<a class="navbar-brand"onclick= "SobreNos()">Sobre nós</a>
+		<a class="navbar-brand">Soluções</a>
+		<a class="navbar-brand">Suporte</a>
+		<a class="navbar-brand" onclick= "Relatorio()">Inserir relatório</a> 
+		
       </div>
     </div>
   </nav>
@@ -27,4 +32,16 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript">
+		function Relatorio(){
+			location.href="Relatorio.html"
+		}
+		function SobreNos(){
+			location.href="Sobre.html"
+		}
+		
+		</script>
+		
+		
 </body></html>
