começando as  mudanças no menu

--- a/free/index.html
+++ b/free/index.html
@@ -105,18 +105,18 @@ Fixed Navigation
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="index.html">Homepage</a></li>
-                     <li><a href="index-text.html">Homepage 2</a></li>
+                     <li><a href="index.html">Quem somos</a></li>
+                     <li><a href="index-text.html">Estrutura</a></li>
                      <li><a href="onepage-slider.html">Onepage</a></li>
                      <li><a href="onepage-text.html">Onepage 2</a></li>
                   </ul>
                </li>
                <li><a href="about.html">Incubadora UTFPR</a></li>
-               <li><a href="service.html">Services</a></li>
+               <li><a href="service.html"></a></li>
                <li><a href="portfolio.html">Portfolio</a></li>
                <li><a href="team.html">Team</a></li>
                <li><a href="pricing.html">Pricing</a></li>
-               <li><a href="contact.html">Contact</a></li>
+               <li><a href="contact.html">Contato</a></li>
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
                   <ul class="dropdown-menu">
