--- a/free/index-home.html
+++ b/free/index-home.html
@@ -103,10 +103,10 @@ Fixed Navigation
       <nav class="collapse navbar-collapse navbar-right">
          <ul id="nav" class="nav navbar-nav menu">
                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Homepage <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="index.html">aaaa</a></li>
-                     <li><a href="index-text.html">Homepage 2</a></li>
+                     <li><a href="index.html">Quem somos</a></li>
+                     <li><a href="index-text.html">Estrutura</a></li>
                      <li><a href="onepage-slider.html">Onepage</a></li>
                      <li><a href="onepage-text.html">Onepage 2</a></li>
                   </ul>
