--- a/free/index-slider.html
+++ b/free/index-slider.html
@@ -103,10 +103,10 @@ Fixed Navigation
       <nav class="collapse navbar-collapse navbar-right">
          <ul id="nav" class="nav navbar-nav menu">
                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Homepage <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="index.html">Homepage</a></li>
-                     <li><a href="index-text.html">Homepage 2</a></li>
+                     <li><a href="index.html">Quem somos</a></li>
+                     <li><a href="index-text.html">Estrutura</a></li>
                      <li><a href="onepage-slider.html">Onepage</a></li>
                      <li><a href="onepage-text.html">Onepage 2</a></li>
                   </ul>
@@ -116,7 +116,7 @@ Fixed Navigation
                <li><a href="portfolio.html">Portfolio</a></li>
                <li><a href="team.html">Team</a></li>
                <li><a href="pricing.html">Pricing</a></li>
-               <li><a href="contact.html">Contact</a></li>
+               <li><a href="contact.html">Contato</a></li>
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -151,7 +151,7 @@ End Fixed Navigation
 				<!-- Text Layer with Fade-In Transition -->
 				<!-- SLIDE'S MAIN BACKGROUND IMAGE -->
 				<div class="opacity-extra-medium bg-black position-relative z-index-1"></div>
-		        <img src="images/slider/slider-bg-1.jpg" alt="Sky" class="rev-slidebg">
+		        <img src="images/slider/eng_soft.png" alt="Sky" class="rev-slidebg">
 		        <!-- Start New layer -->
 				<div class="tp-caption tp-resizeme z-index-1"
  
