--- a/free/onepage-slider.html
+++ b/free/onepage-slider.html
@@ -112,7 +112,7 @@
             <li><a data-scroll href="#portfolio">Portfolio</a></li>
             <li><a data-scroll href="#pricing">Pricing</a></li>
             <li><a data-scroll href="#blog">Blog</a></li>
-            <li><a data-scroll href="#contact">Contact</a></li>
+            <li><a data-scroll href="#contact">Contato</a></li>
             <li class="dropdown">
                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
                <ul class="dropdown-menu">
