modificações para deixar mais de acordo com o que foi pedido

--- a/teste/equipe.html
+++ b/teste/equipe.html
@@ -16,7 +16,7 @@
         <li><a href="home.html">Home</a></li>
         <li><a href="#">Incubadora UTFPR</a>
            <ul>
-                      <li><a href="somos.html">Quem somos</a></li
+                      <li><a href="somos.html">Quem somos</a></li>
                       <li><a href="equipe.html">Equipe</a></li>                   
                 </ul>
                 </li>
@@ -47,35 +47,14 @@
         <li><a href="#">Contato</a></li>
 		<li><a href="#">Receber e-mail</a></li> 		
 </ul>
-</nav>
-
-		<div class="title text-center"  >
+<div class="title text-center"  >
 		     
-			<h1 style = "text-align: center;">Quem somos nós</h1>
-			
-			<p> A incubadora da UTFPR tem por objetivo auxiliar pessoas que querem abrir seu próprio negócio, mas precisam aprimorar seu conhecimento. </p>
-			<div class="border"></div>
-		</div>
-		
-		<div class="title text-center"  >
-		    </br> 
-			<h2 style = "text-align: left;">Missão</h2>
-			<p> Proporcionar aos futuros empresários uma visão de mercado, auxiliando-os no desenvolvimento de sua empresa. </p>
-			<div class="border"></div>
-		
+			<h1 style = "text-align: center;">Equipe</h1>
+</nav>
+<div class="title text-center"  >
+</br>
+		     
+			<img src="marcos.jpg" alt="some text" width=300 height=300>
 	
-		    </br> 
-			<h3 style = "text-align: left;">Visão</h2>
-			<p>Promover o desenvolvimento econômico e social utilizando a tecnologia </p>
-			<div class="border"></div>
-		
-		
-		    </br> 
-			<h4 style = "text-align: left;">Valores</h2>
-			<p> Respeito </p>
-			<p> ÉTICA </p>
-			<p> visão de futuro</p>
-			<div class="border"></div>
-		</div>
-</body>
-</html>
+			<img src="maria.jpg" alt="some text" width=300 height=300>
+</div>
