--- a/teste/home.html
+++ b/teste/home.html
@@ -12,14 +12,12 @@
 <body>
 <nav>
   <ul class="menu">
-  <li class="brand"><img src="utf.jpg" alt="some text" width=80 height=60></li>
+  
         <li><a href="Home.html">Home</a></li>
         <li><a href="#">Incubadora UTFPR</a>
            <ul>
                       <li><a href="somos.html">Quem somos</a></li>
-                      <li><a href="#">Estrutura</a></li>
-                      <li><a href="#">Responsabilidade social</a></li> 
-                      <li><a href="#">Equipe</a></li>                   
+                      <li><a href="equipe.html">Equipe</a></li>                   
                 </ul>
                 </li>
             <li><a href="#">Cursos ofertados</a>
@@ -45,8 +43,8 @@
                       
               </ul>
             </li>
-        <li><a href="#">Links</a></li>
-        <li><a href="#">Contato</a></li>                
+        <li><a href="#">Contato</a></li>
+		<li><a href="#">Receber e-mail</a></li> 		
 </ul>
 </nav>
 
