--- a/teste/home.html
+++ b/teste/home.html
@@ -43,6 +43,14 @@
 		<li><a href="#">Receber e-mail</a></li> 		
 </ul>
 </nav>
+			<img src="utfpr.jpg" alt="some text" width=1300 height=900>
 
+			<div class="wrapper">
+
+          content
+
+        <div class="push"></div>
+      </div>
+      <footer class="footer"></footer>
 </body>
 </html>
