--- a/teste/somos.html
+++ b/teste/somos.html
@@ -47,7 +47,7 @@
 
 		<div class="title text-center"  >
 		     
-			<h1 style = "text-align: center;">Quem somos nós</h1>
+			<h1 style = "text-align:center;">Quem somos</h1>
 			
 			<p> A incubadora da UTFPR tem por objetivo auxiliar pessoas que querem abrir seu próprio negócio, mas precisam aprimorar seu conhecimento. </p>
 			<div class="border"></div>
