mudança nas partes escritas

--- a/free/index-home.html
+++ b/free/index-home.html
@@ -168,8 +168,8 @@ Start About Section
 
       <!-- section title -->
       <div class="title text-center"  >
-        <h2>What Do We Offer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, earum. </p>
+        <h2>UTFPR</h2>
+        <p>A incubadora UTFPR oferece auxilio para você que quer abrir seu próprio negócio </p>
         <div class="border"></div>
       </div>
       <!-- /section title -->
