mudanças na no index

--- a/free/index-home.html
+++ b/free/index-home.html
@@ -10,14 +10,14 @@
   
   <meta name="author" content="Themefisher.com">
 
-  <title>Web| Responsive Multipurpose Parallax HTML5 Template</title>
+  <title>Incubadora UTFPR</title>
 
 <!-- Mobile Specific Meta
   ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/logo1.png" />
   
   <!-- CSS
   ================================================== -->
