--- a/free/index-slider.html
+++ b/free/index-slider.html
@@ -8,9 +8,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="Bingo One page parallax responsive HTML Template ">
   
-  <meta name="author" content="Themefisher.com">
+ 
 
-  <title>Bingo | Responsive Multipurpose Parallax HTML5 Template</title>
+  <title>Incubadora UTFPR</title>
 
 <!-- Mobile Specific Meta
   ================================================== -->
@@ -94,7 +94,7 @@ Fixed Navigation
          <!-- /responsive nav button -->
          <!-- logo -->
          <a class="navbar-brand logo" href="index.html">
-            <img class="logo-default" src="images/logo.png" alt="logo" />
+            <img class="logo-default" src="images/LogoInc.png" alt="logo" />
             <img class="logo-white" src="images/logo-white.png" alt="logo" />
          </a>
          <!-- /logo -->
@@ -337,7 +337,7 @@ Start About Section
 			<!-- /section title -->
 
 			<div class="col-md-6">
-				<img src="images/about/about-2.png" class="img-responsive" alt="">
+				<img src="images/slider/eng_soft.png" class="img-responsive" alt="">
 			</div>
 			<div class="col-md-6">
 				<ul class="checklist">
