fazendo as empresas incubadas

--- a/free/index-slider.html
+++ b/free/index-slider.html
@@ -151,7 +151,7 @@ End Fixed Navigation
 				<!-- Text Layer with Fade-In Transition -->
 				<!-- SLIDE'S MAIN BACKGROUND IMAGE -->
 				<div class="opacity-extra-medium bg-black position-relative z-index-1"></div>
-		        <img src="images/slider/eng_soft.png" alt="Sky" class="rev-slidebg">
+		        <img src="images/slider/bg-1.png" alt="Sky" class="rev-slidebg">
 		        <!-- Start New layer -->
 				<div class="tp-caption tp-resizeme z-index-1"
  
