--- a/free/index.html
+++ b/free/index.html
@@ -102,18 +102,20 @@
                   </ul>
                </li>
                <li><a href="about.html">Incubadora UTFPR</a></li>
+			    <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresas <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                     <li><a href="404.html">Empresas incubadas</a></li>
+                     <li><a href="blog.html">Empresas graduadas</a></li>
+					 <li><a href="blog.html">Banco de ideias</a></li>
+                  </ul>
+               </li>
                <li><a href="service.html"></a></li>
                <li><a href="portfolio.html">Portfolio</a></li>
                <li><a href="team.html">Team</a></li>
                <li><a href="pricing.html">Pricing</a></li>
                <li><a href="contact.html">Contato</a></li>
-               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                     <li><a href="404.html">404 Page</a></li>
-                     <li><a href="blog.html">Blog Page</a></li>
-                  </ul>
-               </li>
+              
             </li>
          </ul>
       </nav>
