--- a/free/index-home.html
+++ b/free/index-home.html
@@ -120,7 +120,7 @@ Fixed Navigation
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="404.html">404 Page</a></li>
+                     <li><a href="empresas.html">Empresas incubadas</a></li>
                      <li><a href="blog.html">Blog Page</a></li>
                   </ul>
                </li>
