--- a/free/graduadas.html
+++ b/free/graduadas.html
@@ -98,7 +98,7 @@
 			   <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresas <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a href="empresas.html">Empresas incubadas</a></li>
+                     <li><a href="incubadas.html">Empresas incubadas</a></li>
                      <li><a href="graduadas.html">Empresas graduadas</a></li>
 					 
                   </ul>
@@ -148,7 +148,7 @@
 				<div class="title text-center ">
 					<h2> Empresas <span class="color">graduadas</span></h2>
 					<div class="border"></div>
-					<p>Inovação e tecnologia disponíveis para te auliar no novo empreendimento</p>
+					<p>Inovação e tecnologia disponíveis para te auxiliar no novo empreendimento</p>
 				</div>
 				<!-- /section title -->
 				<!-- single blog post -->
@@ -183,7 +183,7 @@
 				</article>
 				
 			</div> 
-
+</section>
 
 <footer id="footer" class="bg-one">
   <div class="top-footer">
