--- a/free/index.html
+++ b/free/index.html
@@ -143,7 +143,7 @@
 							<a data-scroll href="banco.html" class="btn btn-main">Banco de ideias</a>		
 						</li>
 						<li>
-							<a data-scroll href="#curso" class="btn btn-transparent">Novidades</a>			
+							<a data-scroll href="novidades.html" class="btn btn-transparent">Novidades</a>			
 						</li>
 						
 					</ul>
