--- a/free/novidades.html
+++ b/free/novidades.html
@@ -99,19 +99,11 @@
 					 
                   </ul>
                </li>
-               <li><a href="service.html">Services</a></li>
-               <li><a href="portfolio.html">Portfolio</a></li>
-               <li><a href="team.html">Team</a></li>
-               <li><a href="pricing.html">Pricing</a></li>
-               <li><a href="contact.html">Contact</a></li>
-               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                     <li><a href="404.html">404 Page</a></li>
-                     <li><a href="blog.html">Blog Page</a></li>
-                  </ul>
-               </li>
-            </li>
+               <li><a href="cursos.html">Cursos Ofertados </a></li>
+			   <li><a href="banco.html">Banco de ideias</a></li>
+                <li><a href="novidades.html">Novidades</a></li>
+				<li><a href="fale.html">Fale conosco</a></li>
+            
          </ul>
       </nav>
       <!-- /main nav -->
